--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -10,7 +10,7 @@
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
-        android:background="@mipmap/ic_launcher_round" />
+        android:background="@mipmap/ic_home" />
 
     <TextView
         android:id="@+id/title_city"
